syntax = "proto3";

option go_package = "../pb;pb";

enum OperationType {
    PUT = 0;
    GET = 1;
    DELETE = 3;
    BATCHPUT = 4;
    SCAN = 5;
}
message Operation {
    OperationType type = 1;
    bytes data = 2;
    uint64 term = 3;
    uint64 index = 4;
}
// protoc --go_out=. --go-grpc_out=. types.proto
